--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule ".vim/bundle/vimshell.vim"]
 	path = .vim/bundle/vimshell.vim
 	url = https://github.com/Shougo/vimshell.vim.git
+[submodule ".vim/bundle/YouCompleteMe"]
+	path = .vim/bundle/YouCompleteMe
+	url = https://github.com/Valloric/YouCompleteMe.git
