Map space to toggle fold

--- a/.gitmodules
+++ b/.gitmodules
@@ -79,3 +79,9 @@
 [submodule ".vim/bundle/jquery.vim"]
 	path = .vim/bundle/jquery.vim
 	url = https://github.com/nono/jquery.vim.git
+[submodule ".vim/bundle/YouCompleteMe"]
+	path = .vim/bundle/YouCompleteMe
+	url = https://github.com/Valloric/YouCompleteMe.git
+[submodule ".vim/bundle/rust.vim"]
+	path = .vim/bundle/rust.vim
+	url = https://github.com/wting/rust.vim.git
