Use ale instead of syntastic

--- a/.gitmodules
+++ b/.gitmodules
@@ -97,3 +97,9 @@
 [submodule ".vim/bundle/vim-python-pep8-indent"]
 	path = .vim/bundle/vim-python-pep8-indent
 	url = https://github.com/hynek/vim-python-pep8-indent.git
+[submodule ".vim/bundle/vim-raml"]
+	path = .vim/bundle/vim-raml
+	url = https://github.com/IN3D/vim-raml.git
+[submodule ".vim/bundle/ale"]
+	path = .vim/bundle/ale
+	url = https://github.com/w0rp/ale.git
